# ollama-mcp-client

./: README.md  pyproject.toml
examples/: ollama_example.py
src/abstract/: base_client.py
src/clients/: ollama_client.py
