[project]
name = "ollama-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4.1",
    "mcp>=1.1.2",
    "ollama>=0.4.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
